@@ -7,6 +7,8 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -32,10 +34,10 @@ public class RepositoryAPI {
     public static DefaultAssetAdministrationShell getAASbyEndpoint(String aasEndpointAsString){
         DefaultAssetAdministrationShell aas = new DefaultAssetAdministrationShell();
         String response = new String();
-        System.out.println("AAS-Endpoint: " + aasEndpointAsString);
 
         try{
-            URL url = new URL(aasEndpointAsString);
+            URI uri = new URI(aasEndpointAsString);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
@@ -49,19 +51,19 @@ public class RepositoryAPI {
             conn.setRequestProperty("Authorization", authHeaderValue);
 
             if (conn.getResponseCode() != 200) {
-			throw new RuntimeException("Failed : HTTP error code : "
-					+ conn.getResponseCode());
-		    }
+            throw new RuntimeException("Failed : HTTP error code : "
+                    + conn.getResponseCode());
+            }
 
-		BufferedReader br = new BufferedReader(new InputStreamReader(
-			(conn.getInputStream())));
+        BufferedReader br = new BufferedReader(new InputStreamReader(
+            (conn.getInputStream())));
 
-		String output = null;
+        String output = null;
         while ((output = br.readLine()) != null) {
             response += output;
-		}
+        }
 
-		conn.disconnect();
+        conn.disconnect();
 
         } catch (MalformedURLException e) {
 
@@ -71,6 +73,9 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
+        } catch (URISyntaxException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
         }
 
         //deserialize Response to AAS
@@ -92,7 +97,8 @@ public class RepositoryAPI {
         String response = new String();
 
         try{
-            URL url = new URL(urlEncoded);
+            URI uri = new URI(urlEncoded);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
@@ -128,7 +134,10 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
-        }
+        } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
 
         //deserialize Response to AAS Descriptors
         try {
@@ -148,7 +157,8 @@ public class RepositoryAPI {
         String response = new String();
 
         try{
-            URL url = new URL(urlEncoded);
+            URI uri = new URI(urlEncoded);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
@@ -184,7 +194,10 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
-        }
+        } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
 
         //deserialize Response to AAS Descriptors
         try {
@@ -205,7 +218,8 @@ public class RepositoryAPI {
         String response = new String();
 
         try{
-            URL url = new URL(urlEncoded);
+            URI uri = new URI(urlEncoded);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
@@ -241,7 +255,10 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
-        }
+        } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
 
         //deserialize Response to AAS Descriptors
         try {
@@ -261,7 +278,8 @@ public class RepositoryAPI {
         String response = new String();
 
         try{
-            URL url = new URL(urlEncoded);
+            URI uri = new URI(urlEncoded);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
@@ -297,7 +315,10 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
-        }
+        } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
 
         //deserialize Response to AAS Descriptors
         try {
@@ -317,8 +338,8 @@ public class RepositoryAPI {
         String response = new String();
 
         try {
-
-            URL url = new URL(urlEncoded);
+            URI uri = new URI(urlEncoded);
+            URL url = uri.toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setDoOutput(true);
             conn.setRequestMethod("POST");
@@ -361,7 +382,10 @@ public class RepositoryAPI {
 
             e.printStackTrace();
 
-        }
+        } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
     }
     
 }
